# heatmap-based-landmarker

./: README.md  requirements.txt  test.py  train.py  train.sh
ckpt/: epoch_46.pth.tar  epoch_80.pth.tar
ckpt_68lmks/: epoch_17.pth.tar
datasets/: data300VW.py  data300WLP.py  data300WStyle.py  dataLAPA106.py  dataset300WCropStyle.py  datasetMask.py  datasetVinAI.py  generate_20k_sample_for_mask.py
models/: heatmapmodel.py  heatmapmodel_eye.py  hrnet18.py  mobilenet.py  mobilenetv2faster.py  mobilev3.py
ncnn/: CMakeLists.txt  benchmark_ncnn.cpp  convert_script.sh  model.onnx  modelL.param  model_sim.onnx  onnx2ncnn  torch2onxx.py
utils/: generate_detector_box_for_LAPA.py
